Fix discover card styling and remove mini-card whitespace

--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,11 @@ body {
   font-weight: 600;
 }
 
+.background-container {
+  position: relative;
+  line-height: 1;
+}
+
 #login-btn {
   position: absolute;
   right: 0;
@@ -399,6 +404,7 @@ body {
   border-radius: 33px 33px 0 0;
   line-height: 0;
   transition: 0.3s;
+  position: relative;
 }
 
 #content-description {
@@ -710,9 +716,13 @@ body {
   right: 0;
 }
 
+.card-content {
+  position: relative;
+}
+
 .content-description {
   line-height: 1;
-  height: 675px;
+  height: 100%;
   background: #ededed;
   display: flex;
   flex-direction: column;
@@ -725,6 +735,8 @@ body {
 
 .content-background {
   flex-grow: 0;
+  width: 100%;
+  display: block;
 }
 
 .bottom-border {
@@ -733,8 +745,8 @@ body {
 }
 
 .content-gradient-overlay {
-  width: 450px;
-  height: 675px;
+  width: 100%;
+  height: 100%;
   position: absolute;
   z-index: 8;
   transition: 0.3s;
@@ -748,7 +760,7 @@ body {
 }
 
 .content-title {
-  height: 37.5%;
+  height: 100%;
   position: absolute;
   top: 0;
   width: 100%;
@@ -856,6 +868,7 @@ body {
 .mini-cur-content-img {
   /* width: 300px;
   height: 450px; */
+  display: block;
 }
 
 .mini-card-title {
@@ -884,7 +897,7 @@ body {
   }
   .content-title {
     font-size: 20px;
-    height: 21.3%;
+    /* height: 21.3%; */
   }
   .btn-container {
     height: 75px;
@@ -932,7 +945,7 @@ body {
   }
   .content-title {
     font-size: 22px;
-    height: 25%;
+    /* height: 25%; */
   }
   .btn-container {
     height: 0px;
@@ -984,7 +997,7 @@ body {
   }
   .content-title {
     font-size: 30px;
-    height: 27%;
+    /* height: 27%; */
   }
   .btn-container {
     height: 0px;
@@ -1033,7 +1046,7 @@ body {
   }
   .content-title {
     font-size: 22px;
-    height: 25%;
+    /* height: 25%; */
   }
   .btn-container {
     height: 0px;
@@ -1081,7 +1094,7 @@ body {
   }
   .content-title {
     font-size: 40px;
-    height: 37.5%;
+    /* height: 37.5%; */
   }
   .btn-container {
     height: 0px;
@@ -1138,7 +1151,7 @@ body {
   }
   .content-title {
     font-size: 20px;
-    height: 24%;
+    /* height: 24%; */
   }
   .btn-container {
     height: 35px;
@@ -1186,7 +1199,7 @@ body {
   }
   .content-title {
     font-size: 22px;
-    height: 27.4%;
+    /* height: 27.4%; */
   }
   .btn-container {
     height: 0px;
@@ -1232,7 +1245,7 @@ body {
   }
   .content-title {
     font-size: 22px;
-    height: 27.4%;
+    /* height: 27.4%; */
   }
   .btn-container {
     height: 0px;
@@ -1325,7 +1338,7 @@ body {
   }
   .content-title {
     font-size: 35px;
-    height: 35.5%;
+    /* height: 35.5%; */
   }
   .btn-container {
     height: 0px;
@@ -1370,7 +1383,7 @@ body {
   }
   .content-title {
     font-size: 20px;
-    height: 18.5%;
+    /* height: 18.5%; */
   }
   .btn-container {
     height: 40px;
@@ -1414,7 +1427,7 @@ body {
   }
   .content-title {
     font-size: 40px;
-    height: 37.5%;
+    /* height: 37.5%; */
   }
   .btn-container {
     height: 125px;
@@ -1443,7 +1456,7 @@ body {
   }
   .content-title {
     font-size: 40px;
-    height: 37.5%;
+    /* height: 37.5%; */
   }
   .btn-container {
     height: 187px;
@@ -1477,7 +1490,7 @@ body {
   }
   .content-title {
     font-size: 40px;
-    height: 33.5%;
+    /* height: 33.5%; */
   }
   .btn-container {
     height: 0px;
